Creation of basic page component

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,51 @@
+:root {
+  --light-50: rgb(236 252 203);
+  --light-100: rgb(217 249 157);
+  --light-200: rgb(163 230 53);
+  --light-300: rgb(132 204 22);
+  --dark-50: rgb(101 163 13);
+  --dark-100: rgb(77 124 15);
+  --white: #f8f9fa;
+  --black: #343a40;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+a,
+button {
+  cursor: pointer;
+  font-family: var(--prompt);
+  font-size: 1rem;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+menu {
+  list-style-type: none;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +53,5 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  background: var(--light-50);
 }
