--- a/src/components/SideBar/Nav.module.scss
+++ b/src/components/SideBar/Nav.module.scss
@@ -1,5 +1,46 @@
 .container {
-  background: var(--dark-100);
-  width: 28vw;
-  height: 100vh;
+  width: 25vw;
+  background-color: var(--light-100);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+  .nav {
+    padding: 2rem 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+
+    .link {
+      margin-left: 0.5rem;
+      
+      .sidebarListItem {
+        padding: 5px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        border-radius: 10px;
+        display: flex;
+        gap: 10px;
+        transition: all 0.3s;
+
+        &:hover {
+          background-color: rgb(240, 240, 255);
+        }
+        &.active {
+          background-color: rgb(240, 240, 255);
+        }
+
+        .sidebarIcon{
+          margin-right: 5px;
+          font-size: 20px !important;
+          color: var(--dark-100);
+        }
+
+        .sidebarListItemText {
+          font-size: 14px;
+          font-weight: 500;
+          color: var(--black);
+        }
+      }
+    }
+  }
 }
